# dmarc-report-milter

./: .gitignore  Cargo.toml  LICENCE  README.md  milter.pc
.github/workflows/: rust.yml
packaging/freebsd/: Makefile  Makefile.crates  distinfo  pkg-descr  pkg-plist
packaging/freebsd/files/: milter-dmarc-report.in
src/: dmarc_email_parser.rs  dmarc_report_model.rs  dmarc_report_process.rs  main.rs
tests/: broken_body.lua  check_subject.lua  failing_report.lua  good_report_gz.lua  good_report_zip.lua  multipart_report.lua  not_a_dmarc_email.lua  utils.lua
tests/dmarc_emails/: google.com!example.net!1728777600!1728863999.xml  multipart-report-with-html.eml  not-a-dmarc-report.eml  report-with-gz.eml  report-with-unreadable-zip.eml  report-with-zip.eml  unreadable-email.eml
tests/dmarc_reports/: correct_dmarc_report.xml  failing_dmarc_report.xml  garbage_string.xml
